seaqt/QtMultimedia/gen_qcamerafeedbackcontrol.h

class QCameraFeedbackControl;
class QMetaMethod;
class QMetaObject;
class QObject;
typedef struct QCameraFeedbackControl QCameraFeedbackControl;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
QMetaObject* QCameraFeedbackControl_metaObject(const QCameraFeedbackControl* self);
void* QCameraFeedbackControl_metacast(QCameraFeedbackControl* self, const char* param1);
int QCameraFeedbackControl_metacall(QCameraFeedbackControl* self, int param1, int param2, void** param3);
struct seaqt_string QCameraFeedbackControl_tr(const char* s);
struct seaqt_string QCameraFeedbackControl_trUtf8(const char* s);
bool QCameraFeedbackControl_isEventFeedbackLocked(const QCameraFeedbackControl* self, int param1);
bool QCameraFeedbackControl_isEventFeedbackEnabled(const QCameraFeedbackControl* self, int param1);
bool QCameraFeedbackControl_setEventFeedbackEnabled(QCameraFeedbackControl* self, int param1, bool param2);
void QCameraFeedbackControl_resetEventFeedback(QCameraFeedbackControl* self, int param1);
bool QCameraFeedbackControl_setEventFeedbackSound(QCameraFeedbackControl* self, int param1, struct seaqt_string filePath);
struct seaqt_string QCameraFeedbackControl_tr2(const char* s, const char* c);
struct seaqt_string QCameraFeedbackControl_tr3(const char* s, const char* c, int n);
struct seaqt_string QCameraFeedbackControl_trUtf82(const char* s, const char* c);
struct seaqt_string QCameraFeedbackControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QCameraFeedbackControl_staticMetaObject();